--- a/inicio.html
+++ b/inicio.html
@@ -84,7 +84,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 
         <!-- MAIN -->
-        <script src="../assets/js/inicio.js"></script>
+        <script src="./js/inicio.js"></script>
 
 
     
