--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduccion</title>
     <link rel="stylesheet" href="./css/styles.css">
-	<link rel="shortcut icon" href="../assets/img/CJ.PNG" type="image/x-icon">
+	<link rel="shortcut icon" href="CJ.PNG" type="image/x-icon">
 </head>
 <body>
     <div id="noc">
