--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/inicio.css">
-        <link rel="shortcut icon" href="../assets/img/about.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./img/about.png" type="image/x-icon">
         <title>Inicio</title>
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -31,8 +31,8 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="javascript: history.go(-1)" class="nav__link">Volver</a></li>
-                        <li class="nav__item"><a href="../assets/about.html" class="nav__link">Quienes somos?</a></li>
-                        <li class="nav__item"><a href="../assets/catalogo.html" class="nav__link">Catalogo</a></li>
+                        <li class="nav__item"><a href="./about.html" class="nav__link">Quienes somos?</a></li>
+                        <li class="nav__item"><a href="./catalogo.html" class="nav__link">Catalogo</a></li>
                         <!--<li class="nav__item"><a href="../Sitioweb/assets/index.html" class="nav__link">Promociones</a></li>-->
                         <!--<li class="nav__item"><a href="#" class="nav__link">Contactenos</a></li>-->
                     </ul>
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="home__img">
-                    <img src="../assets/img/gato.jpeg" alt="perfil">
+                    <img src="./img/gato.jpeg" alt="perfil">
                 </div>
                 
                 <div class="home__social">
