--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- SWIPER CSS-->
-    <link rel="stylesheet" href="../assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="stylesheet" href="./css/about.css">
 
     <title>Quienes Somos</title>
 
@@ -481,37 +481,37 @@
 
                     <h3 class="work__title">Conectados.NET</h3>
 
-                    <a href="../assets/red.html" target="_blank" class="work__button">
+                    <a href="./red.html" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix diseños">
-                    <img src="../assets/img/reloj.png" alt="" class="work__img">
+                    <img src="./img/reloj.png" alt="" class="work__img">
 
                     <h3 class="work__title">Reloj Analogo</h3>
 
-                    <a href="../assets/reloj.html" class="work__button" target="_blank">
+                    <a href="./reloj.html" class="work__button" target="_blank">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix web">
-                    <img src="../assets/img/tab_var.png" alt="" class="work__img">
+                    <img src="./img/tab_var.png" alt="" class="work__img">
 
                     <h3 class="work__title">Barra de navegacion</h3>
 
-                    <a href="../assets/tab_var.html" class="work__button" target="_blank">
+                    <a href="./tab_var.html" class="work__button" target="_blank">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="../assets/img/portafolio.png" alt="" class="work__img">
+                    <img src="./img/portafolio.png" alt="" class="work__img">
 
                     <h3 class="work__title">Portafolio 2021</h3>
 
-                    <a href="../assets/portafolio.html" class="work__button" target="_blank">
+                    <a href="./portafolio.html" class="work__button" target="_blank">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -526,7 +526,7 @@
             <div class="testimonial__container container swiper">
                 <div class="swiper-wrapper">
                     <div class="testimonial__card swiper-slide">
-                        <img src="img/karen.jpeg" alt="" class="testimonial__img">
+                        <img src="./img/karen.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Karen Rivas</h3>
                         <p class="testimonial__name">
@@ -537,7 +537,7 @@
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="img/yesi.jpeg" alt="" class="testimonial__img">
+                        <img src="./img/yesi.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Liseth Velazquez</h3>
                         <p class="testimonial__name">
@@ -546,7 +546,7 @@
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="img/sol.jpeg" alt="" class="testimonial__img">
+                        <img src="./img/sol.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Marisol García</h3>
                         <p class="testimonial__name">
@@ -555,7 +555,7 @@
                     </div>
                     
                     <div class="testimonial__card swiper-slide">
-                        <img src="img/gaby.jpeg" alt="" class="testimonial__img">
+                        <img src="./img/gaby.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Nicolle Majano</h3>
                         <p class="testimonial__name">
@@ -564,7 +564,7 @@
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="../assets/img/dan.jpeg" alt="" class="testimonial__img">
+                        <img src="./img/dan.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Daniela Rivera</h3>
                         <p class="testimonial__name">
