--- a/svvg.html
+++ b/svvg.html
@@ -15,7 +15,7 @@
 
     <link href="./dist/fullPage.js-master/src/fullpage.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/svvg.css">
     
     
 </head>
@@ -55,7 +55,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./dist/fullPage.js-master/src/fullpage.js"></script>   
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
