--- a/red.html
+++ b/red.html
@@ -12,7 +12,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./../../dist/animsition/animation.js"></script>
 
-<link rel="stylesheet" href="../assets/css/red.css">
+<link rel="stylesheet" href="./css/red.css">
 <link rel="shortcut icon" href="./img/c.ico" type="image/x-icon">
 </head>
 <body class="borrarr animsition">
