--- a/portafolio.html
+++ b/portafolio.html
@@ -216,7 +216,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img class="lazy" src="images/inicio.png" alt="">
+                        <img class="lazy" src="./images/inicio.png" alt="">
                         <div class="text">Mi Primer Portafolio</div>
                         <a class="animsition-link" data-animsition-out-class="fade-out-right"
                             href="https://rcd-cesarmontes95.netlify.app" target="_blank">Go</a>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img class="lazy" src="images/php_mysql_crud.png" alt="">
+                        <img class="lazy" src="./images/php_mysql_crud.png" alt="">
                         <div class="text" translate="no">CRUD con PHP</div>
                         <a class="animsition-link" data-animsition-out-class="fade-out-right"
                             href="http://localhost/php_crud_mysql/index.php">Go</a>
