--- a/catalogo.html
+++ b/catalogo.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo</title>
-    <link rel="shortcut icon" href="../assets/img/revista.png" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/catalogo.css">
+    <link rel="shortcut icon" href="./img/revista.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/catalogo.css">
     <!--Box icons-->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -41,7 +41,7 @@
             <div class="home__container bd-grid">
                 <div class="home__portafolio">
                     <div class="home__shape"></div>
-                    <img src="../assets/img/gato.jpeg" width="500" height="300" alt="Gatito" class="home-img">
+                    <img src="./img/gato.jpeg" width="500" height="300" alt="Gatito" class="home-img">
                 </div>
 
                 <div class="home__data">
@@ -61,7 +61,7 @@
             <div class="destacado__container bdgrid">
                 <article class="portafolio">
                     <div class="portafolio__sale">Venta</div>
-                    <img src="../assets/img/portafolio.png" alt="" class="portafolio__img">
+                    <img src="./img/portafolio.png" alt="" class="portafolio__img">
                     <span class="portafolio__name">Portafolio Neon</span>
                     <span class="portafolio__precio">$1200</span>
                     <a href="" class="button-light">Añadir al carrito <i class="bx bx-right-arrow-alt button-icon"></i></a>
@@ -69,7 +69,7 @@
 
                 <article class="portafolio">
                     <div class="portafolio__sale">Venta</div>
-                    <img src="../assets/img/portfolio.png" alt="" class="portafolio__img">
+                    <img src="./img/portfolio.png" alt="" class="portafolio__img">
                     <span class="portafolio__name">Portafolio Gaming</span>
                     <span class="portafolio__precio">$1500</span>
                     <a href="" class="button-light">Añadir al carrito <i class="bx bx-right-arrow-alt button-icon"></i></a>
@@ -77,7 +77,7 @@
 
                 <article class="portafolio">
                     <div class="portafolio__sale">Venta</div>
-                    <img src="../assets/img/luna.png" alt="" class="portafolio__img">
+                    <img src="./img/luna.png" alt="" class="portafolio__img">
                     <span class="portafolio__name">Portafolio SVG</span>
                     <span class="portafolio__precio">$2000</span>
                     <a href="" class="button-light">Añadir al carrito<i class="bx bx-right-arrow-alt button-icon"></i></a>
@@ -95,7 +95,7 @@
                         <p class="plantilla__description">Registrate o loggeate junto con una amable y no tan amable nubecita</p>
                         <a href="#" class="button-light">Comprar Ahora<i class="bx bx-right-arrow-alt button-icon"></i></a>
                     </div>
-                    <img src="../assets/img/nubesita.png" alt="" class="plantilla__img">
+                    <img src="./img/nubesita.png" alt="" class="plantilla__img">
                 </div>
 
                 <div class="plantilla__card">
@@ -104,7 +104,7 @@
                         <p class="plantilla__description">Reloj analogo hecho con CSS3</p>
                         <a href="#" class="button-light">Comprar Ahora<i class="bx bx-right-arrow-alt button-icon"></i></a>
                     </div>
-                    <img src="../assets/img/reloj.png" alt="" class="plantilla__img">
+                    <img src="./img/reloj.png" alt="" class="plantilla__img">
                 </div>
             </div>
         </section>
@@ -118,7 +118,7 @@
                     <p class="promo__description">Red Social Nacional</p>
                     <a href="#" class="button">Compra Ahora</a>
                 </div>
-                <img src="../assets/img/red.png" alt="" class="promo__img">
+                <img src="./img/red.png" alt="" class="promo__img">
             </div>
 
             <div class="promo__container bd-grid">
@@ -127,7 +127,7 @@
                     <p class="promo__description">Biografia personal</p>
                     <a href="#" class="button">Compra Ahora</a>
                 </div>
-                <img src="../assets/img/inicio.png" alt="" class="promo__img">
+                <img src="./img/inicio.png" alt="" class="promo__img">
             </div>
         </section>
 
@@ -137,7 +137,7 @@
 
             <div class="custom__container bd-grid">
                 <div class="custom__plantilla">
-                    <img src="../assets/img/billete-de-banco.png" alt="plantilla" class="custom__plantilla-img">
+                    <img src="./img/billete-de-banco.png" alt="plantilla" class="custom__plantilla-img">
                     <h3 class="custom__title">Personalizaciones</h3>
                     <span class="custom__precio">Desde $300 en adelante</span>
                     <a href="#" class="button-light">Ver mas<i class="bx bx-right-arrow-alt button-icon"></i></a>
@@ -145,7 +145,7 @@
 
                 <div class="custom__portafolio">
                     <div class="custom__portafolio-card">
-                        <img src="../assets/img/1.png" alt="plantillas" class="custom__portafolio-img">
+                        <img src="./img/1.png" alt="plantillas" class="custom__portafolio-img">
                         <div class="custom__portafolio-overlay">
                             <a href="#" class="button">Compra Ahora</a>
                         </div>
@@ -153,7 +153,7 @@
                     <h2 class="section-title">Plantillas</h2>
 
                     <div class="custom__portafolio-card">
-                        <img src="../assets/img/2.png" alt="plantillas" class="custom__portafolio-img">
+                        <img src="./img/2.png" alt="plantillas" class="custom__portafolio-img">
                         <div class="custom__portafolio-overlay">
                             <a href="#" class="button">Compra Ahora</a>
                         </div>
@@ -161,7 +161,7 @@
                     <h2 class="section-title">Paginas web</h2>
 
                     <div class="custom__portafolio-card">
-                        <img src="../assets/img/3.png" alt="plantillas" class="custom__portafolio-img">
+                        <img src="./img/3.png" alt="plantillas" class="custom__portafolio-img">
                         <div class="custom__portafolio-overlay">
                             <a href="#" class="button">Compra Ahora</a>
                         </div>
@@ -228,6 +228,6 @@
         <p class="footer__copy">&#169; 2022 CJ Software. Todos los derechos reservados</p>
     </footer>
     
-    <script src="../assets/js/catalogo.js"></script>
+    <script src="./js/catalogo.js"></script>
 </body>
 </html>
