--- a/portafolio.html
+++ b/portafolio.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link rel="stylesheet" href="./dist/animsition/animation.min.css">
+    <link rel="stylesheet" href="./animation.min.css">
     <link rel="shortcut icon" href="./img/gato.jpeg" type="image/x-icon">
 </head>
 
@@ -303,7 +303,7 @@
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-        <script src="./dist/animsition/animation.js"></script>
+        <script src="./animation.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js">
         </script>
         <script type="text/javascript"
