--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="../assets/img/CJ.PNG" type="mage/x-icon">
+    <link rel="shortcut icon" href="./img/CJ.PNG" type="mage/x-icon">
     
     <!-- BOXICON-->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
