--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduccion</title>
     <link rel="stylesheet" href="./css/styles.css">
-	<link rel="shortcut icon" href="./img/CJ.PNG" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/c.jpeg" type="image/x-icon">
 </head>
 <body>
     <div id="noc">
 		<div class="noc">
 			<div class="noctext">
-				<h1>CJ</h1>
-				<h2>Software</h2>
+				<h1>Cesar</h1>
+				<h2>Coddes</h2>
 			</div>
 			<a href="./inicio.html">BIENVENIDO</a>
 		</div>
