--- a/inicio.html
+++ b/inicio.html
@@ -23,7 +23,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">CJ Software</a>
+                    <a href="#" class="nav__logo">Cesar Coddes</a>
                 </div>
                
 
