--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <nav class="nav container">
             <a href="javascript: history.go(-1)" class="nav__logo">Volver</a>
 
-            <a href="#" class="nav__logo">CJ Software</a>
+            <a href="#" class="nav__logo">Cesar Coddes</a>
 
             <div class="nav__menu">
                 <ul class="nav__list">
