--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="noc">
 		<div class="noc">
 			<div class="noctext">
-				<h1>Cesar</h1>
-				<h2>Coddes</h2>
+				<h1>Cj</h1>
+				<h2>Software</h2>
 			</div>
 			<a href="./inicio.html">BIENVENIDO</a>
 		</div>
