--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduccion</title>
+    <title>Bienvenido a Catalyze</title>
     <link rel="stylesheet" href="./css/styles.css">
-	<link rel="shortcut icon" href="./img/c.jpg" type="image/x-icon">
+	<link rel="shortcut icon" href="./img/Logo V2.png" type="image/x-icon">
 </head>
 <body>
     <div id="noc">
 		<div class="noc">
 			<div class="noctext">
-				<h1>Cj</h1>
-				<h2>Software</h2>
+				<h1>Catalyze</h1>
+				<h2>Catalyze</h2>
 			</div>
 			<a href="./inicio.html">BIENVENIDO</a>
 		</div>
