--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="./img/CJ.PNG" type="mage/x-icon">
+    <link rel="shortcut icon" href="./img/gatologo.png" type="mage/x-icon">
     
     <!-- BOXICON-->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -30,7 +30,7 @@
         <nav class="nav container">
             <a href="javascript: history.go(-1)" class="nav__logo">Volver</a>
 
-            <a href="#" class="nav__logo">CJ Software</a>
+            <a href="#" class="nav__logo">Catalyze</a>
 
             <div class="nav__menu">
                 <ul class="nav__list">
@@ -53,7 +53,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#work" class="nav__link">
+                        <a href="#works" class="nav__link">
                             <i class='bx bx-briefcase-alt-2' ></i>
                         </a>
                     </li>
@@ -85,7 +85,7 @@
                     <div class="home__buttons">
                         <a download="" href="#" class="button button--ghost">Download CV</a>
 
-                        <a href="#about" class="button">About us</a>
+                        <a href="#about" class="button">Acerca de Nosotros</a>
                     </div>
                 </div>
 
@@ -454,7 +454,7 @@
         </section>
 
         <!-- WORK -->
-        <section class="work section" id="work">
+        <section class="work section" id="works">
             <span class="section__subtitle">Nuestro Portafolio</span>
             <h2 class="section__title">Trabajos recientes</h2>
 
@@ -609,7 +609,7 @@
                         <div class="contact__card">
                             <i class='bx bxl-twitter contact__card-icon'></i>
                             <h3 class="contact__card-title">Twitter</h3>
-                            <span class="contact__card-data">@RexCd95</span>
+                            <span class="contact__card-data">@catalyze</span>
 
                             <a href="https://twitter.com/RexCd95" target="_blank" class="contact__button">
                                 Write me<i class='bx bx-right-arrow-alt contact__button-icon'></i>
@@ -647,7 +647,7 @@
     <!-- FOOTER-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">CJ Software</h1>
+            <h1 class="footer__title">Catalyze</h1>
             <ul class="footer__list">
                 <li>
                     <a href="#about" class="footer__link">Acerca de</a>
@@ -677,7 +677,7 @@
             </ul>
 
             <span class="footer__copy">
-                &#169; CJ Software. All rights reserved 2022
+                &#169; Catalyze. All rights reserved 2022
             </span>
         </div>
     </footer>
