--- a/catalogo.html
+++ b/catalogo.html
@@ -16,7 +16,7 @@
             <div class="nav__toggle" id="nav-toggle">
                 <i class="bx bxs-grid"></i>
             </div>
-            <a href="javascript: history.go(-1)" class="nav__logo">CJ Software</a>
+            <a href="javascript: history.go(-1)" class="nav__logo">Catalyze</a>
 
             <div class="">
                 <i class='bx bx-moon change-theme' id="theme-button"></i>
@@ -27,6 +27,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active">home</a></li>
                     <li class="nav__item"><a href="#destacado" class="nav__link">destacado</a></li>
                     <li class="nav__item"><a href="#nuevos" class="nav__link">nuevo</a></li>
+                    <li class="nav__item"><a href="#personalizaciones" class="nav__link">personalizaciones</a></li>
                     <li class="nav__item"><a href="#promo" class="nav__link">Promociones</a></li>
                     <li class="nav__item"><a href="#premium" class="nav__link">Premium</a></li>
                     <li class="nav__item"><a href="#footer" class="nav__link">Contactos</a></li>
@@ -36,8 +37,9 @@
     </header>
 
     <main class="main">
+        
         <section class="home" id="home">
-            <h2 class="section-title">BIENVENIDO/A <br>CJ-Shopping</h2>
+            <h2 class="section-title">BIENVENIDO/A <br>CataShop</h2>
             <div class="home__container bd-grid">
                 <div class="home__portafolio">
                     <div class="home__shape"></div>
@@ -132,7 +134,7 @@
         </section>
 
         <!--Customization-->
-        <section class="custom section" id="sitios">
+        <section class="custom section" id="personalizaciones">
             <h2 class="section-title">Personalizaciones!</h2>
 
             <div class="custom__container bd-grid">
@@ -193,7 +195,7 @@
         <h2 class="section-title">Acerca de</h2>
         <div class="footer__container bd-grid">
             <div class="footer__box">
-                <h3 class="footer__title">CJ Software</h3>
+                <h3 class="footer__title">Catalyze</h3>
                 <p class="footer__description">Proximamente mucho mas...</p>
             </div>
 
@@ -225,7 +227,7 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2022 CJ Software. Todos los derechos reservados</p>
+        <p class="footer__copy">&#169; 2022 Catalyze. Todos los derechos reservados</p>
     </footer>
     
     <script src="./js/catalogo.js"></script>
